# digdag-pages

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
examples/: README.md
examples/sample_project/: workflow.dig
examples/sample_project/config/: environment.yml
examples/sample_project/queries/: foo.sql
src/digdaggraph/: cli.py  constants.py  digdag_meta.py  graph_blocks.py  graph_generate.py  html_pages.py  html_theme.py  index_page.py  logging_config.py  sql_extract.py  td_meta.py  yaml_includes.py
tests/: test_sql_extract.py  test_yaml_includes.py
